--- a/07-summary-tables.html
+++ b/07-summary-tables.html
@@ -57,16 +57,16 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </style>
 
 
-<script src="0X-table_files/libs/clipboard/clipboard.min.js"></script>
-<script src="0X-table_files/libs/quarto-html/quarto.js"></script>
-<script src="0X-table_files/libs/quarto-html/popper.min.js"></script>
-<script src="0X-table_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="0X-table_files/libs/quarto-html/anchor.min.js"></script>
-<link href="0X-table_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="0X-table_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="0X-table_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="0X-table_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="0X-table_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="07-summary-tables_files/libs/clipboard/clipboard.min.js"></script>
+<script src="07-summary-tables_files/libs/quarto-html/quarto.js"></script>
+<script src="07-summary-tables_files/libs/quarto-html/popper.min.js"></script>
+<script src="07-summary-tables_files/libs/quarto-html/tippy.umd.min.js"></script>
+<script src="07-summary-tables_files/libs/quarto-html/anchor.min.js"></script>
+<link href="07-summary-tables_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="07-summary-tables_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="07-summary-tables_files/libs/bootstrap/bootstrap.min.js"></script>
+<link href="07-summary-tables_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="07-summary-tables_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
 
 
 </head>
@@ -75,7 +75,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 
 <div id="quarto-content" class="page-columns page-rows-contents page-layout-article">
 <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-<div class="quarto-alternate-formats"><h2>Other Formats</h2><ul><li><a href="0X-table.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul></div></div>
+<div class="quarto-alternate-formats"><h2>Other Formats</h2><ul><li><a href="07-summary-tables.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul></div></div>
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
@@ -468,6 +468,20 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </div>
 <section id="summary-rt-tables" class="level3">
 <h3 class="anchored" data-anchor-id="summary-rt-tables">Summary RT tables</h3>
+<!--
+#### Whole sample
+
+
+::: {.cell}
+::: {.cell-output-display}
+|Variable      | n_Obs |   Mean |     SD | Median |    MAD |    Min |     Max | Skewness | Kurtosis |
+|:-------------|:-----:|:------:|:------:|:------:|:------:|:------:|:-------:|:--------:|:--------:|
+|Implicit task |  8409 | 621.61 | 222.18 | 567.00 | 145.29 | 301.00 | 2761.00 |     2.30 |     8.40 |
+|Explicit task |  8366 | 732.79 | 307.27 | 649.00 | 212.01 | 302.00 | 2864.00 |     1.86 |     4.71 |
+:::
+:::
+
+-->
 <section id="implicit-task" class="level4">
 <h4 class="anchored" data-anchor-id="implicit-task">Implicit task</h4>
 <div class="cell">
